--- a/student.env
+++ b/student.env
@@ -1,3 +1,3 @@
-STUDENT_NAME=JUAN PÉREZ
-STUDENT_EMAIL=jperez@est.ups.edu.ec
+STUDENT_NAME=Bryan Santos
+STUDENT_EMAIL=bsantosr@est.ups.edu.ec
 FILA_ESTUDIANTE=A
